# final-project-kala-krasia

./: .gitignore  README.md  Wind_Turbine_Homework_0_week_9.py  pyproject.toml  requirements.txt
examples/: main.py  test_analysis.py  test_loader.py
src/: data_loader.py  test_loader.py  wind_analysis.py
tests/: test_aep.py  test_extrapolation.py  test_fitweibull.py  test_functions1.py  test_functions2.py  test_interpolation.py  test_loader.py  test_weibull.py  test_windrose.py
